# disp_lab1

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: classroom.yml
postman/: [inst][heroku] Lab1.postman_environment.json  [inst][local] Lab1.postman_environment.json
src/app/: client.py  manage.py  pytest.ini
src/app/project/: asgi.py  settings.py  urls.py  wsgi.py
src/app/web_app/: apps.py  models.py  test_person.py  tests.py  urls.py  views.py
